[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/thol_launcher_theme_1.tres" type="Theme" id=1]
[ext_resource path="res://assets/_reusable/reset/Reset_Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/unique/twin_code/twin_code.gd" type="Script" id=4]

[node name="twc_twin_code" type="HBoxContainer"]
margin_top = 96.0
margin_right = 551.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="twc_label" type="Label" parent="."]
margin_right = 275.0
margin_bottom = 32.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
text = "Twin Code"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="twc_hbox" type="HBoxContainer" parent="."]
margin_left = 275.0
margin_right = 551.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="twc_lineedit" type="LineEdit" parent="twc_hbox"]
margin_right = 247.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 0.819608, 0.819608, 0.819608, 0.2 )
custom_constants/minimum_spaces = 8
max_length = 20
placeholder_text = "Twin Code"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="twc_reset" parent="twc_hbox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 251.0
margin_top = 3.0
margin_right = 276.0
margin_bottom = 28.0

[connection signal="text_changed" from="twc_hbox/twc_lineedit" to="." method="_on_twc_lineedit_text_changed"]
